# robotics_with_romi

./: README.md
arduino/inverse_kinematics/: README.md  application.cpp  application.h  motor_with_encoder.h  pid_control.cpp  pid_control.h
arduino/inverse_kinematics_i2c/: README.md  application.cpp  application.h  circular_queue.h  cmd_response.h  inverse_kinematics_i2c.ino  motor_with_encoder.cpp
arduino/pwm_to_enc_ticks/: application.cpp  application.h  motor_with_encoder.h  pwm_to_enc_ticks.ino
arduino/velocity_control/: motor_with_encoder.cpp  motor_with_encoder.h  pid_control.h  velocity_control.ino  velocity_control_app.cpp  velocity_control_app.h
pybullet_simulation/: README.md  __init__.py  inverse_kinematics.py  inverse_kinematics_cam_viz.py  motion_controller.py  romi_meshes.urdf
python_simulations/forward_kinematics_sim/: __init__.py  forward_kinematics_sim.py  path_view_widget.py
python_simulations/helper_py/: __init__.py  buffer.py  example_triangles.py  example_triangles_debug.py  program.py  texture.py
python_simulations/inverse_kinematics_sim/: __init__.py  inverse_kinematics_sim.py  motion_control.py  path_view_widget.py
python_simulations/robot_models/: __init__.py  pid_control.py  robot_params.py  wheel_with_encoder.py
python_simulations/virtual_controller/: __init__.py  control_widget.py  joystick_widget.py  test_joystick.py
qt_cpp/: CMakeLists.txt  README.md
qt_cpp/forward_kinematics_sim/: CMakeLists.txt  main.cpp  main_dlg.cpp  main_dlg.h  main_dlg.ui  path_view_widget.cpp  path_view_widget.h  resources.qrc
qt_cpp/helper_opengl/: CMakeLists.txt  README.md  buffer.h  program.cpp  program.h  texture.cpp  texture.h
qt_cpp/inverse_kinematics_app/: CMakeLists.txt  motion_control_thread.cpp
qt_cpp/inverse_kinematics_app_i2c/: CMakeLists.txt  README.md  cmd_response.h  i2c_slave.cpp  i2c_slave.h  motion_control_thread.cpp  motion_control_thread.h  romi_robot_server.cpp  romi_robot_server.h
qt_cpp/inverse_kinematics_sim_app/: CMakeLists.txt  main.cpp  motion_control_thread.cpp  motion_control_thread.h  romi_robot_server.cpp  romi_robot_server.h
qt_cpp/inverse_kinematics_viewer/: CMakeLists.txt  README.md  comms_thread.cpp  comms_thread.h  main.cpp  main_dlg.cpp  main_dlg.h  main_dlg.ui  path_view_widget.cpp  path_view_widget.h  resources.qrc
qt_cpp/robot_sim_models/: CMakeLists.txt  wheel_with_encoder.h
qt_cpp/virtual_controller/: CMakeLists.txt  control_widget.cpp  control_widget.h  joystick_widget.cpp  joystick_widget.h  test_joystick.cpp
qt_cpp/wheel_models/: motor_with_encoder.py  pid_controller.py  pid_velocity_control_simulation.py  plot_romi_data.py  romi_pwm_enc_data_25ms_sampling.txt  romi_pwm_reader.py
romi_gazebo/: CMakeLists.txt  README.md  romi_control.launch.py  romi_encoder_plugin.cpp  romi_world.sdf  tugbot_depot.sdf  wheel_with_encoder.h
